--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+
+# time in milisec (hour)
+jwt.expirationTime=3600000
+jwt.secret=lkngre!@432XAdawd1@@*(
