Add registration event and listener

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 
+# properties
 # time in milisec (hour)
 jwt.expirationTime=3600000
 jwt.secret=lkngre!@432XAdawd1@@*(
+
+app.url=http://localhost:8080
