Extend the token validity (from hour to month)
Allows for more convenient testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 
 # properties
-# time in milisec (hour)
-jwt.expirationTime=3600000
+# time in milisec (hour x 24 x 30 => month)
+jwt.expirationTime=2592000000
 jwt.secret=lkngre!@432XAdawd1@@*(
 
 app.url=http://localhost:8080
