Add mail for sending mail (testing mail)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ app.url=http://localhost:8080
 # mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=HIDDEN
-spring.mail.password=HIDDEN
+spring.mail.username=testowyziomekzmazur@gmail.com
+spring.mail.password=tdjugjjkwfybmhie
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
