Change register verification token from local to heroku server URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.jpa.hibernate.ddl-auto=create
 jwt.expirationTime=2592000000
 jwt.secret=lkngre!@432XAdawd1@@*(
 
-app.url=http://localhost:8080
+app.url.local=http://localhost:8080
+app.url.heroku=https://web-notes-server.herokuapp.com
 
 # mail
 spring.mail.host=smtp.gmail.com
