Add SQL formatting for logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.properties.hibernate.format_sql=true
 
 # properties
 # time in milisec (hour x 24 x 30 => month)
