Create properties and separated H2 DB for tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:db
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.format_sql=true
 
 # properties
 # time in milisec (hour x 24 x 30 => month)
